--- a/takip.html
+++ b/takip.html
@@ -3,356 +3,356 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>DEBE</title>
+  <title>TAKİP</title>
 </head>
 <body>
   <h2>Partial Index Listesi</h2>
   <ol><li>
+ <a href="/battlefield-6--4023002?a=buddyrecent">
+    battlefield 6
+    <div class="detail">erkeginyabancilasmasi</div>
+  </a> 
+<input type="checkbox" name="check-0">
+</li>
+<li>
  <a href="/gune-bir-alinti-birak--6517778?a=buddyrecent">
     güne bir alıntı bırak
     <div class="detail">sana yaralarimdan cicekler biraktim, deep talk</div>
   </a> 
-<input type="checkbox" name="check-0">
+<input type="checkbox" name="check-1">
 </li>
 <li>
  <a href="/bir-fotograf-bir-sarki--8054500?a=buddyrecent">
     bir fotoğraf bir şarkı
     <div class="detail">sana yaralarimdan cicekler biraktim</div>
   </a> 
-<input type="checkbox" name="check-1">
+<input type="checkbox" name="check-2">
 </li>
 <li>
  <a href="/nadirkitap-com--1656635?a=buddyrecent">
     nadirkitap.com
     <div class="detail">lantirn161</div>
   </a> 
-<input type="checkbox" name="check-2">
+<input type="checkbox" name="check-3">
 </li>
 <li>
  <a href="/zvi-migdal--8060925?a=buddyrecent">
     zvi migdal
     <div class="detail">fulgura</div>
   </a> 
-<input type="checkbox" name="check-3">
+<input type="checkbox" name="check-4">
 </li>
 <li>
  <a href="/rusya-ukrayna-savasi--4263453?a=buddyrecent">
     rusya ukrayna savaşı
     <div class="detail">maarri, 1123581321, daimat</div>
   </a> 
-<input type="checkbox" name="check-4">
+<input type="checkbox" name="check-5">
 </li>
 <li>
  <a href="/3-ocak-2026-abdnin-maduro-ve-esini-kacirmasi--8060447?a=buddyrecent">
     3 ocak 2026 abd'nin maduro ve eşini kaçırması
     <div class="detail">dragonlady, i dont give a fuck about the world, daimat</div>
   </a> 
-<input type="checkbox" name="check-5">
+<input type="checkbox" name="check-6">
 </li>
 <li>
  <a href="/mv-ocean-trader--8060922?a=buddyrecent">
     mv ocean trader
     <div class="detail">i dont give a fuck about the world</div>
   </a> 
-<input type="checkbox" name="check-6">
+<input type="checkbox" name="check-7">
 </li>
 <li>
  <a href="/delta-force--41725?a=buddyrecent">
     delta force
     <div class="detail">i dont give a fuck about the world, imfuckinluvmyboobs</div>
   </a> 
-<input type="checkbox" name="check-7">
+<input type="checkbox" name="check-8">
 </li>
 <li>
  <a href="/venezuela-olayindan-cikarilacak-ders--8060690?a=buddyrecent">
     venezuela olayından çıkarılacak ders
     <div class="detail">dragonlady, arkanabakmassankuserim</div>
   </a> 
-<input type="checkbox" name="check-8">
+<input type="checkbox" name="check-9">
 </li>
 <li>
  <a href="/3-ocak-2026-uluslararasi-sistemin-cokusu--8060722?a=buddyrecent">
     3 ocak 2026 uluslararası sistemin çöküşü
     <div class="detail">maarri</div>
   </a> 
-<input type="checkbox" name="check-9">
+<input type="checkbox" name="check-10">
 </li>
 <li>
  <a href="/alti-kelimelik-hikayeler--6194071?a=buddyrecent">
     altı kelimelik hikayeler
     <div class="detail">deep talk</div>
   </a> 
-<input type="checkbox" name="check-10">
+<input type="checkbox" name="check-11">
 </li>
 <li>
  <a href="/3-ocak-2026-abdnin-venezuelaya-saldirmasi--8060393?a=buddyrecent">
     3 ocak 2026 abd'nin venezuela'ya saldırması
     <div class="detail">kazasker, shinigami ryuk, recond1te +1 takip</div>
   </a> 
-<input type="checkbox" name="check-11">
+<input type="checkbox" name="check-12">
 </li>
 <li>
  <a href="/geceye-rusca-bir-sarki-birak--5926581?a=buddyrecent">
     geceye rusça bir şarkı bırak
     <div class="detail">deep talk</div>
   </a> 
-<input type="checkbox" name="check-12">
+<input type="checkbox" name="check-13">
 </li>
 <li>
  <a href="/onno-tunc--44040?a=buddyrecent">
     onno tunç
     <div class="detail">deep talk</div>
   </a> 
-<input type="checkbox" name="check-13">
+<input type="checkbox" name="check-14">
 </li>
 <li>
  <a href="/siirin-geri-kalanini-onemsiz-kilan-misra--6802257?a=buddyrecent">
     şiirin geri kalanını önemsiz kılan mısra
     <div class="detail">deep talk</div>
   </a> 
-<input type="checkbox" name="check-14">
+<input type="checkbox" name="check-15">
 </li>
 <li>
  <a href="/monday-kill-list--8060660?a=buddyrecent">
     monday kill list
     <div class="detail">i dont give a fuck about the world</div>
   </a> 
-<input type="checkbox" name="check-15">
+<input type="checkbox" name="check-16">
 </li>
 <li>
  <a href="/exxon-chevron-baris-odulu--8060652?a=buddyrecent">
     exxon-chevron barış ödülü
     <div class="detail">i dont give a fuck about the world</div>
   </a> 
-<input type="checkbox" name="check-16">
+<input type="checkbox" name="check-17">
 </li>
 <li>
  <a href="/recep-tayyip-erdogan--95281?a=buddyrecent">
     recep tayyip erdoğan
     <div class="detail">1123581321, deep talk</div>
   </a> 
-<input type="checkbox" name="check-17">
+<input type="checkbox" name="check-18">
 </li>
 <li>
  <a href="/cok-sevdigini-belli-etmek--5035549?a=buddyrecent">
     çok sevdiğini belli etmek
     <div class="detail">deep talk</div>
   </a> 
-<input type="checkbox" name="check-18">
+<input type="checkbox" name="check-19">
 </li>
 <li>
  <a href="/sosyalizm--47030?a=buddyrecent">
     sosyalizm
     <div class="detail">shinigami ryuk</div>
   </a> 
-<input type="checkbox" name="check-19">
+<input type="checkbox" name="check-20">
 </li>
 <li>
  <a href="/sozluk-yazarlarinin-cektigi-fotograflar--5297538?a=buddyrecent">
     sözlük yazarlarının çektiği fotoğraflar
     <div class="detail">sana yaralarimdan cicekler biraktim, deep talk</div>
   </a> 
-<input type="checkbox" name="check-20">
+<input type="checkbox" name="check-21">
 </li>
 <li>
  <a href="/mustafa-kemal-ataturk--34712?a=buddyrecent">
     mustafa kemal atatürk
     <div class="detail">sana yaralarimdan cicekler biraktim</div>
   </a> 
-<input type="checkbox" name="check-21">
+<input type="checkbox" name="check-22">
 </li>
 <li>
  <a href="/argumentum-ad-baculum--883823?a=buddyrecent">
     argumentum ad baculum
     <div class="detail">i dont give a fuck about the world</div>
   </a> 
-<input type="checkbox" name="check-22">
+<input type="checkbox" name="check-23">
 </li>
 <li>
  <a href="/abdnin-venezuelada-bulunma-amaci--8060603?a=buddyrecent">
     abd'nin venezuela'da bulunma amacı
     <div class="detail">deep talk</div>
   </a> 
-<input type="checkbox" name="check-23">
+<input type="checkbox" name="check-24">
 </li>
 <li>
  <a href="/southern-district-of-new-york--7906795?a=buddyrecent">
     southern district of new york
     <div class="detail">i dont give a fuck about the world</div>
   </a> 
-<input type="checkbox" name="check-24">
+<input type="checkbox" name="check-25">
 </li>
 <li>
  <a href="/somon-baliginin-yaninda-ne-icilir-sorunsali--7394706?a=buddyrecent">
     somon balığının yanında ne içilir sorunsalı
     <div class="detail">deep talk</div>
   </a> 
-<input type="checkbox" name="check-25">
+<input type="checkbox" name="check-26">
 </li>
 <li>
  <a href="/delcy-rodriguez--8060522?a=buddyrecent">
     delcy rodriguez
     <div class="detail">i dont give a fuck about the world</div>
   </a> 
-<input type="checkbox" name="check-26">
+<input type="checkbox" name="check-27">
 </li>
 <li>
  <a href="/nicolas-maduro--1597355?a=buddyrecent">
     nicolas maduro
     <div class="detail">i dont give a fuck about the world</div>
   </a> 
-<input type="checkbox" name="check-27">
+<input type="checkbox" name="check-28">
 </li>
 <li>
  <a href="/sayi-istasyonu--1547441?a=buddyrecent">
     sayı istasyonu
     <div class="detail">i dont give a fuck about the world</div>
   </a> 
-<input type="checkbox" name="check-28">
+<input type="checkbox" name="check-29">
 </li>
 <li>
  <a href="/sigarasini-dusurmeden-eliyle-domuz-yakalayan-dayi--8060397?a=buddyrecent">
     sigarasını düşürmeden eliyle domuz yakalayan dayı
     <div class="detail">i dont give a fuck about the world</div>
   </a> 
-<input type="checkbox" name="check-29">
+<input type="checkbox" name="check-30">
 </li>
 <li>
  <a href="/soylemek-istenip-de-soylenemeyenler--925858?a=buddyrecent">
     söylemek istenip de söylenemeyenler
     <div class="detail">deep talk</div>
   </a> 
-<input type="checkbox" name="check-30">
+<input type="checkbox" name="check-31">
 </li>
 <li>
  <a href="/savasin-ilk-gunu-cumhurbaskani-kacirilan-ulke--8060479?a=buddyrecent">
     savasin ilk gunu cumhurbaskani kacirilan ulke
     <div class="detail">dragonlady</div>
   </a> 
-<input type="checkbox" name="check-31">
+<input type="checkbox" name="check-32">
 </li>
 <li>
  <a href="/arda-pazir--6156273?a=buddyrecent">
     arda pazır
     <div class="detail">shinigami ryuk</div>
   </a> 
-<input type="checkbox" name="check-32">
+<input type="checkbox" name="check-33">
 </li>
 <li>
  <a href="/paranin-bir-insani-elit-yapip-yapmayacagi--7415466?a=buddyrecent">
     paranın bir insanı elit yapıp yapmayacağı
     <div class="detail">sana yaralarimdan cicekler biraktim, patanona matanona</div>
   </a> 
-<input type="checkbox" name="check-33">
+<input type="checkbox" name="check-34">
 </li>
 <li>
  <a href="/bedri-usta--3780342?a=buddyrecent">
     bedri usta
     <div class="detail">shinigami ryuk, recond1te</div>
   </a> 
-<input type="checkbox" name="check-34">
+<input type="checkbox" name="check-35">
 </li>
 <li>
  <a href="/cem-yilmaz--32715?a=buddyrecent">
     cem yılmaz
     <div class="detail">i dont give a fuck about the world, mertim1011, erkeginyabancilasmasi</div>
   </a> 
-<input type="checkbox" name="check-35">
+<input type="checkbox" name="check-36">
 </li>
 <li>
  <a href="/ak-parti-uye-sayisinin-11-543-301e-ulasmasi--8060265?a=buddyrecent">
     ak parti üye sayısının 11.543.301'e ulaşması
     <div class="detail">pilav normal bence siz gerzeksiniz</div>
   </a> 
-<input type="checkbox" name="check-36">
+<input type="checkbox" name="check-37">
 </li>
 <li>
  <a href="/ben-leman--8018328?a=buddyrecent">
     ben leman
     <div class="detail">i dont give a fuck about the world</div>
   </a> 
-<input type="checkbox" name="check-37">
+<input type="checkbox" name="check-38">
 </li>
 <li>
  <a href="/delayed-sleep-phase-syndrome--1652424?a=buddyrecent">
     delayed sleep phase syndrome
     <div class="detail">highpriestess</div>
   </a> 
-<input type="checkbox" name="check-38">
+<input type="checkbox" name="check-39">
 </li>
 <li>
  <a href="/zanka-tv--6043506?a=buddyrecent">
     zanka tv
     <div class="detail">fulgura</div>
   </a> 
-<input type="checkbox" name="check-39">
+<input type="checkbox" name="check-40">
 </li>
 <li>
  <a href="/ogrenildiginde-ufku-iki-katina-cikaran-seyler--2593151?a=buddyrecent">
     öğrenildiğinde ufku iki katına çıkaran şeyler
     <div class="detail">sana yaralarimdan cicekler biraktim</div>
   </a> 
-<input type="checkbox" name="check-40">
+<input type="checkbox" name="check-41">
 </li>
 <li>
  <a href="/tayfun-kahraman--3466752?a=buddyrecent">
     tayfun kahraman
     <div class="detail">9x</div>
   </a> 
-<input type="checkbox" name="check-41">
+<input type="checkbox" name="check-42">
 </li>
 <li>
  <a href="/alright-then--3086874?a=buddyrecent">
     alright then
     <div class="detail">i dont give a fuck about the world</div>
   </a> 
-<input type="checkbox" name="check-42">
+<input type="checkbox" name="check-43">
 </li>
 <li>
  <a href="/en-son-alinan-iltifat--4121802?a=buddyrecent">
     en son alınan iltifat
     <div class="detail">i dont give a fuck about the world</div>
   </a> 
-<input type="checkbox" name="check-43">
+<input type="checkbox" name="check-44">
 </li>
 <li>
  <a href="/salep--44130?a=buddyrecent">
     salep
     <div class="detail">sana yaralarimdan cicekler biraktim</div>
   </a> 
-<input type="checkbox" name="check-44">
+<input type="checkbox" name="check-45">
 </li>
 <li>
  <a href="/bir-tat-bir-doku--101356?a=buddyrecent">
     bir tat bir doku
     <div class="detail">mertim1011</div>
   </a> 
-<input type="checkbox" name="check-45">
+<input type="checkbox" name="check-46">
 </li>
 <li>
  <a href="/rasyonalizm--50071?a=buddyrecent">
     rasyonalizm
     <div class="detail">sana yaralarimdan cicekler biraktim</div>
   </a> 
-<input type="checkbox" name="check-46">
+<input type="checkbox" name="check-47">
 </li>
 <li>
  <a href="/slaven-bilic--1432572?a=buddyrecent">
     slaven bilic
     <div class="detail">sana yaralarimdan cicekler biraktim</div>
   </a> 
-<input type="checkbox" name="check-47">
+<input type="checkbox" name="check-48">
 </li>
 <li>
  <a href="/marmara-34--159279?a=buddyrecent">
     marmara 34
-    <div class="detail">i dont give a fuck about the world</div>
-  </a> 
-<input type="checkbox" name="check-48">
-</li>
-<li>
- <a href="/kah-gulduk-kah-eglendik--1239242?a=buddyrecent">
-    kah güldük kah eğlendik
     <div class="detail">i dont give a fuck about the world</div>
   </a> 
 <input type="checkbox" name="check-49">
@@ -360,7 +360,7 @@
 </ol>
   
   <button id="fetchEntries">Seçilenleri Çek</button>
-  <button id="openEntry">Entry Dosyasını Aç</button>
+  <button id="openEntry">takipEntry Dosyasını Aç</button>
 
   <script>
     document.getElementById("fetchEntries").addEventListener("click", async () => {
@@ -384,14 +384,14 @@
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ links: checkedLinks })
         });
-        alert("entry.html dosyası güncellendi!");
+        alert("takipentry.html dosyası güncellendi!");
       } catch (e) {
         alert("Sunucuya bağlanılamadı. (Backend çalışıyor mu?)");
       }
     });
 
     document.getElementById("openEntry").addEventListener("click", () => {
-      window.open("entry.html", "_blank");
+      window.open("takipentry.html", "_blank");
     });
   </script>
 </body>
