--- a/takip.html
+++ b/takip.html
@@ -8,352 +8,352 @@
 <body>
   <h2>Partial Index Listesi</h2>
   <ol><li>
- <a href="/5-ocak-2026-galatasaray-trabzonspor-maci--8047554?a=buddyrecent">
-    5 ocak 2026 galatasaray trabzonspor maçı
-    <div class="detail">gedik ahmet pasha</div>
+ <a href="/sevilen-siirin-en-vurucu-cumlesi--3679333?a=buddyrecent">
+    sevilen şiirin en vurucu cümlesi
+    <div class="detail">deep talk</div>
   </a> 
 <input type="checkbox" name="check-0">
 </li>
 <li>
- <a href="/hayat-felsefesi-yapilabilecek-en-guzel-soz--4843239?a=buddyrecent">
-    hayat felsefesi yapılabilecek en güzel söz
-    <div class="detail">sana yaralarimdan cicekler biraktim</div>
+ <a href="/geceye-bir-alinti-birak--6301033?a=buddyrecent">
+    geceye bir alıntı bırak
+    <div class="detail">deep talk</div>
   </a> 
 <input type="checkbox" name="check-1">
 </li>
 <li>
- <a href="/40-yas-ustu-sozluk-yazarlarini-istemiyoruz--8061190?a=buddyrecent">
-    40 yaş üstü sözlük yazarlarını istemiyoruz
-    <div class="detail">gedik ahmet pasha</div>
+ <a href="/new-yorkta-yasamayanlarin-hayati-kacirmasi--7788428?a=buddyrecent">
+    new york'ta yaşamayanların hayatı kaçırması
+    <div class="detail">erkeginyabancilasmasi</div>
   </a> 
 <input type="checkbox" name="check-2">
 </li>
 <li>
- <a href="/borsa-istanbul--3559807?a=buddyrecent">
-    borsa istanbul
-    <div class="detail">arkanabakmassankuserim, patanona matanona</div>
+ <a href="/unutulmayan-film-replikleri--156164?a=buddyrecent">
+    unutulmayan film replikleri
+    <div class="detail">deep talk</div>
   </a> 
 <input type="checkbox" name="check-3">
 </li>
 <li>
- <a href="/sozlukculerin-favori-muzik-albumleri--6468181?a=buddyrecent">
-    sözlükçülerin favori müzik albümleri
-    <div class="detail">fatmagulun yengesi</div>
+ <a href="/ilber-ortaylinin-amerikan-hayrani-turklere-sitemi--8061606?a=buddyrecent">
+    ilber ortaylı'nın amerikan hayranı türklere sitemi
+    <div class="detail">imfuckinluvmyboobs</div>
   </a> 
 <input type="checkbox" name="check-4">
 </li>
 <li>
- <a href="/dogan-cuceloglu--125857?a=buddyrecent">
-    doğan cüceloğlu
-    <div class="detail">sana yaralarimdan cicekler biraktim</div>
+ <a href="/sarikamis-faciasi--159319?a=buddyrecent">
+    sarıkamış faciası
+    <div class="detail">daimat</div>
   </a> 
 <input type="checkbox" name="check-5">
 </li>
 <li>
- <a href="/kablosuz-kulaklik--855797?a=buddyrecent">
-    kablosuz kulaklık
-    <div class="detail">shinigami ryuk</div>
+ <a href="/sozlukculerin-spotify-calma-listeleri--4726913?a=buddyrecent">
+    sözlükçülerin spotify çalma listeleri
+    <div class="detail">deep talk</div>
   </a> 
 <input type="checkbox" name="check-6">
 </li>
 <li>
- <a href="/4-ocak-2026-besiktas-gain-fenerbahce-beko-maci--8060319?a=buddyrecent">
-    4 ocak 2026 beşiktaş gain fenerbahçe beko maçı
-    <div class="detail">patanona matanona</div>
+ <a href="/ogretmen-maaslarinin-100-bin-tlye-ulasmasi--8061453?a=buddyrecent">
+    öğretmen maaşlarının 100 bin tl'ye ulaşması
+    <div class="detail">istanbul masali</div>
   </a> 
 <input type="checkbox" name="check-7">
 </li>
 <li>
- <a href="/amerika-birlesik-devletleri--74714?a=buddyrecent">
-    amerika birleşik devletleri
-    <div class="detail">imfuckinluvmyboobs</div>
+ <a href="/situation-monitoring--8061534?a=buddyrecent">
+    situation monitoring
+    <div class="detail">i dont give a fuck about the world</div>
   </a> 
 <input type="checkbox" name="check-8">
 </li>
 <li>
- <a href="/national-geospatial-intelligence-agency--2850508?a=buddyrecent">
-    national geospatial-intelligence agency
-    <div class="detail">imfuckinluvmyboobs</div>
+ <a href="/rumi--299355?a=buddyrecent">
+    rumi
+    <div class="detail">sana yaralarimdan cicekler biraktim</div>
   </a> 
 <input type="checkbox" name="check-9">
+</li>
+<li>
+ <a href="/gune-bir-sarki-birak--5327510?a=buddyrecent">
+    güne bir şarkı bırak
+    <div class="detail">deep talk</div>
+  </a> 
+<input type="checkbox" name="check-10">
 </li>
 <li>
  <a href="/rusya-ukrayna-savasi--4263453?a=buddyrecent">
     rusya ukrayna savaşı
     <div class="detail">maarri, 1123581321, daimat</div>
   </a> 
-<input type="checkbox" name="check-10">
+<input type="checkbox" name="check-11">
+</li>
+<li>
+ <a href="/cihangir-goktas--6277742?a=buddyrecent">
+    cihangir göktaş
+    <div class="detail">i dont give a fuck about the world</div>
+  </a> 
+<input type="checkbox" name="check-12">
+</li>
+<li>
+ <a href="/venezuela-kizlari--1734065?a=buddyrecent">
+    venezuela kızları
+    <div class="detail">shinigami ryuk</div>
+  </a> 
+<input type="checkbox" name="check-13">
+</li>
+<li>
+ <a href="/belirli-bir-yastan-sonra-dost-edinmenin-bitmesi--6503086?a=buddyrecent">
+    belirli bir yaştan sonra dost edinmenin bitmesi
+    <div class="detail">deep talk</div>
+  </a> 
+<input type="checkbox" name="check-14">
+</li>
+<li>
+ <a href="/sonvera--7899755?a=buddyrecent">
+    sonvera
+    <div class="detail">deep talk</div>
+  </a> 
+<input type="checkbox" name="check-15">
+</li>
+<li>
+ <a href="/leroy-sane--4481332?a=buddyrecent">
+    leroy sane
+    <div class="detail">pilav normal bence siz gerzeksiniz</div>
+  </a> 
+<input type="checkbox" name="check-16">
+</li>
+<li>
+ <a href="/nicolas-maduro--1597355?a=buddyrecent">
+    nicolas maduro
+    <div class="detail">i dont give a fuck about the world, highpriestess</div>
+  </a> 
+<input type="checkbox" name="check-17">
+</li>
+<li>
+ <a href="/trumpin-kiziyim-can-guvenligim-yok--8061392?a=buddyrecent">
+    trump'in kızıyım can güvenliğim yok
+    <div class="detail">i dont give a fuck about the world</div>
+  </a> 
+<input type="checkbox" name="check-18">
+</li>
+<li>
+ <a href="/evinden-38-kopek-17-kedi-cikan-kadin--8061295?a=buddyrecent">
+    evinden 38 köpek 17 kedi çıkan kadın
+    <div class="detail">9x</div>
+  </a> 
+<input type="checkbox" name="check-19">
+</li>
+<li>
+ <a href="/statik-marjin--5833779?a=buddyrecent">
+    statik marjin
+    <div class="detail">highpriestess</div>
+  </a> 
+<input type="checkbox" name="check-20">
+</li>
+<li>
+ <a href="/iran--45394?a=buddyrecent">
+    iran
+    <div class="detail">kazasker</div>
+  </a> 
+<input type="checkbox" name="check-21">
+</li>
+<li>
+ <a href="/5-ocak-2026-galatasaray-trabzonspor-maci--8047554?a=buddyrecent">
+    5 ocak 2026 galatasaray trabzonspor maçı
+    <div class="detail">gedik ahmet pasha</div>
+  </a> 
+<input type="checkbox" name="check-22">
+</li>
+<li>
+ <a href="/hayat-felsefesi-yapilabilecek-en-guzel-soz--4843239?a=buddyrecent">
+    hayat felsefesi yapılabilecek en güzel söz
+    <div class="detail">sana yaralarimdan cicekler biraktim</div>
+  </a> 
+<input type="checkbox" name="check-23">
+</li>
+<li>
+ <a href="/40-yas-ustu-sozluk-yazarlarini-istemiyoruz--8061190?a=buddyrecent">
+    40 yaş üstü sözlük yazarlarını istemiyoruz
+    <div class="detail">gedik ahmet pasha</div>
+  </a> 
+<input type="checkbox" name="check-24">
+</li>
+<li>
+ <a href="/borsa-istanbul--3559807?a=buddyrecent">
+    borsa istanbul
+    <div class="detail">arkanabakmassankuserim, patanona matanona</div>
+  </a> 
+<input type="checkbox" name="check-25">
+</li>
+<li>
+ <a href="/sozlukculerin-favori-muzik-albumleri--6468181?a=buddyrecent">
+    sözlükçülerin favori müzik albümleri
+    <div class="detail">fatmagulun yengesi</div>
+  </a> 
+<input type="checkbox" name="check-26">
+</li>
+<li>
+ <a href="/dogan-cuceloglu--125857?a=buddyrecent">
+    doğan cüceloğlu
+    <div class="detail">sana yaralarimdan cicekler biraktim</div>
+  </a> 
+<input type="checkbox" name="check-27">
+</li>
+<li>
+ <a href="/kablosuz-kulaklik--855797?a=buddyrecent">
+    kablosuz kulaklık
+    <div class="detail">shinigami ryuk</div>
+  </a> 
+<input type="checkbox" name="check-28">
+</li>
+<li>
+ <a href="/4-ocak-2026-besiktas-gain-fenerbahce-beko-maci--8060319?a=buddyrecent">
+    4 ocak 2026 beşiktaş gain fenerbahçe beko maçı
+    <div class="detail">patanona matanona</div>
+  </a> 
+<input type="checkbox" name="check-29">
+</li>
+<li>
+ <a href="/amerika-birlesik-devletleri--74714?a=buddyrecent">
+    amerika birleşik devletleri
+    <div class="detail">imfuckinluvmyboobs</div>
+  </a> 
+<input type="checkbox" name="check-30">
+</li>
+<li>
+ <a href="/national-geospatial-intelligence-agency--2850508?a=buddyrecent">
+    national geospatial-intelligence agency
+    <div class="detail">imfuckinluvmyboobs</div>
+  </a> 
+<input type="checkbox" name="check-31">
 </li>
 <li>
  <a href="/attila-ilhan-siirlerinde-gecen-vurucu-cumleler--5803068?a=buddyrecent">
     attila ilhan şiirlerinde geçen vurucu cümleler
     <div class="detail">deep talk</div>
   </a> 
-<input type="checkbox" name="check-11">
+<input type="checkbox" name="check-32">
 </li>
 <li>
  <a href="/operation-absolute-resolve--8060666?a=buddyrecent">
     operation absolute resolve
     <div class="detail">imfuckinluvmyboobs</div>
   </a> 
-<input type="checkbox" name="check-12">
+<input type="checkbox" name="check-33">
 </li>
 <li>
  <a href="/uluslararasi-hukuk--239099?a=buddyrecent">
     uluslararası hukuk
     <div class="detail">highpriestess</div>
   </a> 
-<input type="checkbox" name="check-13">
+<input type="checkbox" name="check-34">
 </li>
 <li>
  <a href="/alone--94026?a=buddyrecent">
     alone
     <div class="detail">kimin tenisi daha buyuk</div>
   </a> 
-<input type="checkbox" name="check-14">
+<input type="checkbox" name="check-35">
 </li>
 <li>
  <a href="/ah-be-hic-haberin-yok--4357474?a=buddyrecent">
     ah be hiç haberin yok
     <div class="detail">deep talk</div>
   </a> 
-<input type="checkbox" name="check-15">
+<input type="checkbox" name="check-36">
 </li>
 <li>
  <a href="/yazarlarin-kendileri-hakkindaki-gereksiz-bilgiler--7479895?a=buddyrecent">
     yazarların kendileri hakkındaki gereksiz bilgiler
     <div class="detail">deep talk</div>
   </a> 
-<input type="checkbox" name="check-16">
+<input type="checkbox" name="check-37">
 </li>
 <li>
  <a href="/sozluk-yazarlarinin-cizimleri--3824175?a=buddyrecent">
     sözlük yazarlarının çizimleri
     <div class="detail">highpriestess</div>
   </a> 
-<input type="checkbox" name="check-17">
+<input type="checkbox" name="check-38">
 </li>
 <li>
  <a href="/venezuela-bolivari-satin-alip-10-sene-bekletmek--6991906?a=buddyrecent">
     venezuela bolivarı satın alıp 10 sene bekletmek
     <div class="detail">i dont give a fuck about the world</div>
   </a> 
-<input type="checkbox" name="check-18">
+<input type="checkbox" name="check-39">
 </li>
 <li>
  <a href="/starbucksin-kahvesinin-cok-kotu-olmasi--5963883?a=buddyrecent">
     starbucks'ın kahvesinin çok kötü olması
     <div class="detail">deep talk</div>
   </a> 
-<input type="checkbox" name="check-19">
+<input type="checkbox" name="check-40">
 </li>
 <li>
  <a href="/battlefield-6--4023002?a=buddyrecent">
     battlefield 6
     <div class="detail">erkeginyabancilasmasi</div>
   </a> 
-<input type="checkbox" name="check-20">
+<input type="checkbox" name="check-41">
 </li>
 <li>
  <a href="/gune-bir-alinti-birak--6517778?a=buddyrecent">
     güne bir alıntı bırak
     <div class="detail">deep talk</div>
   </a> 
-<input type="checkbox" name="check-21">
+<input type="checkbox" name="check-42">
 </li>
 <li>
  <a href="/bir-fotograf-bir-sarki--8054500?a=buddyrecent">
     bir fotoğraf bir şarkı
     <div class="detail">sana yaralarimdan cicekler biraktim</div>
   </a> 
-<input type="checkbox" name="check-22">
+<input type="checkbox" name="check-43">
 </li>
 <li>
  <a href="/nadirkitap-com--1656635?a=buddyrecent">
     nadirkitap.com
     <div class="detail">lantirn161</div>
   </a> 
-<input type="checkbox" name="check-23">
+<input type="checkbox" name="check-44">
 </li>
 <li>
  <a href="/zvi-migdal--8060925?a=buddyrecent">
     zvi migdal
     <div class="detail">fulgura</div>
   </a> 
-<input type="checkbox" name="check-24">
+<input type="checkbox" name="check-45">
 </li>
 <li>
  <a href="/3-ocak-2026-abdnin-maduro-ve-esini-kacirmasi--8060447?a=buddyrecent">
     3 ocak 2026 abd'nin maduro ve eşini kaçırması
     <div class="detail">dragonlady, i dont give a fuck about the world, daimat</div>
   </a> 
-<input type="checkbox" name="check-25">
+<input type="checkbox" name="check-46">
 </li>
 <li>
  <a href="/mv-ocean-trader--8060922?a=buddyrecent">
     mv ocean trader
     <div class="detail">i dont give a fuck about the world</div>
   </a> 
-<input type="checkbox" name="check-26">
+<input type="checkbox" name="check-47">
 </li>
 <li>
  <a href="/delta-force--41725?a=buddyrecent">
     delta force
     <div class="detail">i dont give a fuck about the world, imfuckinluvmyboobs</div>
   </a> 
-<input type="checkbox" name="check-27">
+<input type="checkbox" name="check-48">
 </li>
 <li>
  <a href="/venezuela-olayindan-cikarilacak-ders--8060690?a=buddyrecent">
     venezuela olayından çıkarılacak ders
     <div class="detail">dragonlady, arkanabakmassankuserim</div>
-  </a> 
-<input type="checkbox" name="check-28">
-</li>
-<li>
- <a href="/3-ocak-2026-uluslararasi-sistemin-cokusu--8060722?a=buddyrecent">
-    3 ocak 2026 uluslararası sistemin çöküşü
-    <div class="detail">maarri</div>
-  </a> 
-<input type="checkbox" name="check-29">
-</li>
-<li>
- <a href="/alti-kelimelik-hikayeler--6194071?a=buddyrecent">
-    altı kelimelik hikayeler
-    <div class="detail">deep talk</div>
-  </a> 
-<input type="checkbox" name="check-30">
-</li>
-<li>
- <a href="/3-ocak-2026-abdnin-venezuelaya-saldirmasi--8060393?a=buddyrecent">
-    3 ocak 2026 abd'nin venezuela'ya saldırması
-    <div class="detail">kazasker, shinigami ryuk, recond1te +1 takip</div>
-  </a> 
-<input type="checkbox" name="check-31">
-</li>
-<li>
- <a href="/geceye-rusca-bir-sarki-birak--5926581?a=buddyrecent">
-    geceye rusça bir şarkı bırak
-    <div class="detail">deep talk</div>
-  </a> 
-<input type="checkbox" name="check-32">
-</li>
-<li>
- <a href="/onno-tunc--44040?a=buddyrecent">
-    onno tunç
-    <div class="detail">deep talk</div>
-  </a> 
-<input type="checkbox" name="check-33">
-</li>
-<li>
- <a href="/siirin-geri-kalanini-onemsiz-kilan-misra--6802257?a=buddyrecent">
-    şiirin geri kalanını önemsiz kılan mısra
-    <div class="detail">deep talk</div>
-  </a> 
-<input type="checkbox" name="check-34">
-</li>
-<li>
- <a href="/monday-kill-list--8060660?a=buddyrecent">
-    monday kill list
-    <div class="detail">i dont give a fuck about the world</div>
-  </a> 
-<input type="checkbox" name="check-35">
-</li>
-<li>
- <a href="/exxon-chevron-baris-odulu--8060652?a=buddyrecent">
-    exxon-chevron barış ödülü
-    <div class="detail">i dont give a fuck about the world</div>
-  </a> 
-<input type="checkbox" name="check-36">
-</li>
-<li>
- <a href="/recep-tayyip-erdogan--95281?a=buddyrecent">
-    recep tayyip erdoğan
-    <div class="detail">1123581321, deep talk</div>
-  </a> 
-<input type="checkbox" name="check-37">
-</li>
-<li>
- <a href="/cok-sevdigini-belli-etmek--5035549?a=buddyrecent">
-    çok sevdiğini belli etmek
-    <div class="detail">deep talk</div>
-  </a> 
-<input type="checkbox" name="check-38">
-</li>
-<li>
- <a href="/sosyalizm--47030?a=buddyrecent">
-    sosyalizm
-    <div class="detail">shinigami ryuk</div>
-  </a> 
-<input type="checkbox" name="check-39">
-</li>
-<li>
- <a href="/sozluk-yazarlarinin-cektigi-fotograflar--5297538?a=buddyrecent">
-    sözlük yazarlarının çektiği fotoğraflar
-    <div class="detail">sana yaralarimdan cicekler biraktim, deep talk</div>
-  </a> 
-<input type="checkbox" name="check-40">
-</li>
-<li>
- <a href="/mustafa-kemal-ataturk--34712?a=buddyrecent">
-    mustafa kemal atatürk
-    <div class="detail">sana yaralarimdan cicekler biraktim</div>
-  </a> 
-<input type="checkbox" name="check-41">
-</li>
-<li>
- <a href="/argumentum-ad-baculum--883823?a=buddyrecent">
-    argumentum ad baculum
-    <div class="detail">i dont give a fuck about the world</div>
-  </a> 
-<input type="checkbox" name="check-42">
-</li>
-<li>
- <a href="/abdnin-venezuelada-bulunma-amaci--8060603?a=buddyrecent">
-    abd'nin venezuela'da bulunma amacı
-    <div class="detail">deep talk</div>
-  </a> 
-<input type="checkbox" name="check-43">
-</li>
-<li>
- <a href="/southern-district-of-new-york--7906795?a=buddyrecent">
-    southern district of new york
-    <div class="detail">i dont give a fuck about the world</div>
-  </a> 
-<input type="checkbox" name="check-44">
-</li>
-<li>
- <a href="/somon-baliginin-yaninda-ne-icilir-sorunsali--7394706?a=buddyrecent">
-    somon balığının yanında ne içilir sorunsalı
-    <div class="detail">deep talk</div>
-  </a> 
-<input type="checkbox" name="check-45">
-</li>
-<li>
- <a href="/delcy-rodriguez--8060522?a=buddyrecent">
-    delcy rodriguez
-    <div class="detail">i dont give a fuck about the world</div>
-  </a> 
-<input type="checkbox" name="check-46">
-</li>
-<li>
- <a href="/nicolas-maduro--1597355?a=buddyrecent">
-    nicolas maduro
-    <div class="detail">i dont give a fuck about the world</div>
-  </a> 
-<input type="checkbox" name="check-47">
-</li>
-<li>
- <a href="/sayi-istasyonu--1547441?a=buddyrecent">
-    sayı istasyonu
-    <div class="detail">i dont give a fuck about the world</div>
-  </a> 
-<input type="checkbox" name="check-48">
-</li>
-<li>
- <a href="/sigarasini-dusurmeden-eliyle-domuz-yakalayan-dayi--8060397?a=buddyrecent">
-    sigarasını düşürmeden eliyle domuz yakalayan dayı
-    <div class="detail">i dont give a fuck about the world</div>
   </a> 
 <input type="checkbox" name="check-49">
 </li>
