--- a/takip.html
+++ b/takip.html
@@ -8,352 +8,352 @@
 <body>
   <h2>Partial Index Listesi</h2>
   <ol><li>
- <a href="/turk-kadininin-iyi-anne-olamamasi--3837084?a=buddyrecent">
-    türk kadınının iyi anne olamaması
+ <a href="/erkeklerin-en-degerli-oldugu-yas--7316000?a=buddyrecent">
+    erkeklerin en değerli olduğu yaş
     <div class="detail">deep talk</div>
   </a> 
 <input type="checkbox" name="check-0">
 </li>
 <li>
- <a href="/sanal-kumar-bagimlisinin-son-videosu--8061629?a=buddyrecent">
-    sanal kumar bağımlısının son videosu
-    <div class="detail">mertim1011</div>
+ <a href="/bilinen-en-sasirtici-tarihi-bilgi--6514752?a=buddyrecent">
+    bilinen en şaşırtıcı tarihi bilgi
+    <div class="detail">imfuckinluvmyboobs</div>
   </a> 
 <input type="checkbox" name="check-1">
 </li>
 <li>
- <a href="/bes-katki-payinin-yuzde-20ye-dusmesi--8061725?a=buddyrecent">
-    bes katkı payının yüzde 20'ye düşmesi
-    <div class="detail">arkanabakmassankuserim</div>
+ <a href="/oreshnik--7904737?a=buddyrecent">
+    oreshnik
+    <div class="detail">imfuckinluvmyboobs</div>
   </a> 
 <input type="checkbox" name="check-2">
 </li>
 <li>
- <a href="/venezuela-kizlari--1734065?a=buddyrecent">
-    venezuela kızları
-    <div class="detail">shinigami ryuk, i dont give a fuck about the world</div>
+ <a href="/gune-bir-tavsiye-birak--6271787?a=buddyrecent">
+    güne bir tavsiye bırak
+    <div class="detail">deep talk</div>
   </a> 
 <input type="checkbox" name="check-3">
 </li>
 <li>
- <a href="/venezuela-katrani--8061764?a=buddyrecent">
-    venezuela katranı
-    <div class="detail">i dont give a fuck about the world</div>
+ <a href="/twitter--1663823?a=buddyrecent">
+    twitter
+    <div class="detail">daimat</div>
   </a> 
 <input type="checkbox" name="check-4">
 </li>
 <li>
- <a href="/bitumen--1448338?a=buddyrecent">
-    bitumen
-    <div class="detail">i dont give a fuck about the world</div>
+ <a href="/soylemek-istenip-de-soylenemeyenler--925858?a=buddyrecent">
+    söylemek istenip de söylenemeyenler
+    <div class="detail">deep talk</div>
   </a> 
 <input type="checkbox" name="check-5">
-</li>
-<li>
- <a href="/geceye-bir-siir-birak--4945041?a=buddyrecent">
-    geceye bir şiir bırak
-    <div class="detail">deep talk</div>
-  </a> 
-<input type="checkbox" name="check-6">
-</li>
-<li>
- <a href="/geceye-bir-alinti-birak--6301033?a=buddyrecent">
-    geceye bir alıntı bırak
-    <div class="detail">deep talk</div>
-  </a> 
-<input type="checkbox" name="check-7">
-</li>
-<li>
- <a href="/new-yorkta-yasamayanlarin-hayati-kacirmasi--7788428?a=buddyrecent">
-    new york'ta yaşamayanların hayatı kaçırması
-    <div class="detail">erkeginyabancilasmasi</div>
-  </a> 
-<input type="checkbox" name="check-8">
-</li>
-<li>
- <a href="/unutulmayan-film-replikleri--156164?a=buddyrecent">
-    unutulmayan film replikleri
-    <div class="detail">deep talk</div>
-  </a> 
-<input type="checkbox" name="check-9">
-</li>
-<li>
- <a href="/ilber-ortaylinin-amerikan-hayrani-turklere-sitemi--8061606?a=buddyrecent">
-    ilber ortaylı'nın amerikan hayranı türklere sitemi
-    <div class="detail">imfuckinluvmyboobs</div>
-  </a> 
-<input type="checkbox" name="check-10">
-</li>
-<li>
- <a href="/sarikamis-faciasi--159319?a=buddyrecent">
-    sarıkamış faciası
-    <div class="detail">daimat</div>
-  </a> 
-<input type="checkbox" name="check-11">
-</li>
-<li>
- <a href="/sozlukculerin-spotify-calma-listeleri--4726913?a=buddyrecent">
-    sözlükçülerin spotify çalma listeleri
-    <div class="detail">deep talk</div>
-  </a> 
-<input type="checkbox" name="check-12">
-</li>
-<li>
- <a href="/situation-monitoring--8061534?a=buddyrecent">
-    situation monitoring
-    <div class="detail">i dont give a fuck about the world</div>
-  </a> 
-<input type="checkbox" name="check-13">
-</li>
-<li>
- <a href="/rumi--299355?a=buddyrecent">
-    rumi
-    <div class="detail">sana yaralarimdan cicekler biraktim</div>
-  </a> 
-<input type="checkbox" name="check-14">
-</li>
-<li>
- <a href="/gune-bir-sarki-birak--5327510?a=buddyrecent">
-    güne bir şarkı bırak
-    <div class="detail">deep talk</div>
-  </a> 
-<input type="checkbox" name="check-15">
 </li>
 <li>
  <a href="/rusya-ukrayna-savasi--4263453?a=buddyrecent">
     rusya ukrayna savaşı
     <div class="detail">maarri, 1123581321, daimat</div>
   </a> 
+<input type="checkbox" name="check-6">
+</li>
+<li>
+ <a href="/sozluk-yazarlarinin-siirleri--629432?a=buddyrecent">
+    sözlük yazarlarının şiirleri
+    <div class="detail">animal deist</div>
+  </a> 
+<input type="checkbox" name="check-7">
+</li>
+<li>
+ <a href="/geceye-bir-alinti-birak--6301033?a=buddyrecent">
+    geceye bir alıntı bırak
+    <div class="detail">deep talk</div>
+  </a> 
+<input type="checkbox" name="check-8">
+</li>
+<li>
+ <a href="/yazarlarin-en-kurt-ozelligi--7270220?a=buddyrecent">
+    yazarların en kürt özelliği
+    <div class="detail">laaa edriii</div>
+  </a> 
+<input type="checkbox" name="check-9">
+</li>
+<li>
+ <a href="/sessiz-kismi-sesli-soylemek--8050905?a=buddyrecent">
+    sessiz kısmı sesli söylemek
+    <div class="detail">i dont give a fuck about the world</div>
+  </a> 
+<input type="checkbox" name="check-10">
+</li>
+<li>
+ <a href="/devlettapar--7059550?a=buddyrecent">
+    devlettapar
+    <div class="detail">highpriestess</div>
+  </a> 
+<input type="checkbox" name="check-11">
+</li>
+<li>
+ <a href="/arsiv-unutmaz--5100571?a=buddyrecent">
+    arşiv unutmaz
+    <div class="detail">i dont give a fuck about the world</div>
+  </a> 
+<input type="checkbox" name="check-12">
+</li>
+<li>
+ <a href="/prosopometamorphopsia--4984690?a=buddyrecent">
+    prosopometamorphopsia
+    <div class="detail">highpriestess</div>
+  </a> 
+<input type="checkbox" name="check-13">
+</li>
+<li>
+ <a href="/instagram--2543417?a=buddyrecent">
+    instagram
+    <div class="detail">deep talk</div>
+  </a> 
+<input type="checkbox" name="check-14">
+</li>
+<li>
+ <a href="/kimci--1180366?a=buddyrecent">
+    kimçi
+    <div class="detail">deep talk</div>
+  </a> 
+<input type="checkbox" name="check-15">
+</li>
+<li>
+ <a href="/post-pozitivizm--121405?a=buddyrecent">
+    post pozitivizm
+    <div class="detail">highpriestess</div>
+  </a> 
 <input type="checkbox" name="check-16">
 </li>
 <li>
- <a href="/cihangir-goktas--6277742?a=buddyrecent">
-    cihangir göktaş
-    <div class="detail">i dont give a fuck about the world</div>
+ <a href="/halil-inalcikin-abartildigi-gercegi--6828896?a=buddyrecent">
+    halil inalcık'ın abartıldığı gerçeği
+    <div class="detail">erkeginyabancilasmasi, deep talk</div>
   </a> 
 <input type="checkbox" name="check-17">
 </li>
 <li>
- <a href="/belirli-bir-yastan-sonra-dost-edinmenin-bitmesi--6503086?a=buddyrecent">
-    belirli bir yaştan sonra dost edinmenin bitmesi
-    <div class="detail">deep talk</div>
+ <a href="/9-ocak-2026-son-videosunu-ceken-bahis-bagimlisi--8062671?a=buddyrecent">
+    9 ocak 2026 son videosunu çeken bahis bağımlısı
+    <div class="detail">mertim1011</div>
   </a> 
 <input type="checkbox" name="check-18">
 </li>
 <li>
- <a href="/sonvera--7899755?a=buddyrecent">
-    sonvera
+ <a href="/en-yakin-arkadasinin-en-yakin-olmasinin-3-sebebi--7359919?a=buddyrecent">
+    en yakın arkadaşının en yakın olmasının 3 sebebi
     <div class="detail">deep talk</div>
   </a> 
 <input type="checkbox" name="check-19">
 </li>
 <li>
- <a href="/leroy-sane--4481332?a=buddyrecent">
-    leroy sane
-    <div class="detail">pilav normal bence siz gerzeksiniz</div>
+ <a href="/coffy--2043698?a=buddyrecent">
+    coffy
+    <div class="detail">deep talk</div>
   </a> 
 <input type="checkbox" name="check-20">
 </li>
 <li>
- <a href="/nicolas-maduro--1597355?a=buddyrecent">
-    nicolas maduro
-    <div class="detail">i dont give a fuck about the world, highpriestess</div>
+ <a href="/borsa-istanbul--3559807?a=buddyrecent">
+    borsa istanbul
+    <div class="detail">uzakyol kaptani, arkanabakmassankuserim, patanona matanona</div>
   </a> 
 <input type="checkbox" name="check-21">
 </li>
 <li>
- <a href="/trumpin-kiziyim-can-guvenligim-yok--8061392?a=buddyrecent">
-    trump'in kızıyım can güvenliğim yok
-    <div class="detail">i dont give a fuck about the world</div>
+ <a href="/su-an-hissedilen-duygu--5746438?a=buddyrecent">
+    şu an hissedilen duygu
+    <div class="detail">deep talk</div>
   </a> 
 <input type="checkbox" name="check-22">
 </li>
 <li>
- <a href="/evinden-38-kopek-17-kedi-cikan-kadin--8061295?a=buddyrecent">
-    evinden 38 köpek 17 kedi çıkan kadın
-    <div class="detail">9x</div>
+ <a href="/tuesday-morning-kill-list--8062689?a=buddyrecent">
+    tuesday morning kill list
+    <div class="detail">i dont give a fuck about the world</div>
   </a> 
 <input type="checkbox" name="check-23">
 </li>
 <li>
- <a href="/statik-marjin--5833779?a=buddyrecent">
-    statik marjin
-    <div class="detail">highpriestess</div>
+ <a href="/geceye-behzat-cden-bir-replik-birak--5756513?a=buddyrecent">
+    geceye behzat ç'den bir replik bırak
+    <div class="detail">deep talk</div>
   </a> 
 <input type="checkbox" name="check-24">
 </li>
 <li>
- <a href="/iran--45394?a=buddyrecent">
-    iran
-    <div class="detail">kazasker</div>
+ <a href="/gune-bir-kedi-fotografi-birak--7311083?a=buddyrecent">
+    güne bir kedi fotoğrafı bırak
+    <div class="detail">deep talk</div>
   </a> 
 <input type="checkbox" name="check-25">
 </li>
 <li>
- <a href="/5-ocak-2026-galatasaray-trabzonspor-maci--8047554?a=buddyrecent">
-    5 ocak 2026 galatasaray trabzonspor maçı
-    <div class="detail">gedik ahmet pasha</div>
+ <a href="/7-ocak-2026-gumruksuz-yurtdisi-alisverisin-bitmesi--8061759?a=buddyrecent">
+    7 ocak 2026 gümrüksüz yurtdışı alışverişin bitmesi
+    <div class="detail">dragonlady, highpriestess</div>
   </a> 
 <input type="checkbox" name="check-26">
 </li>
 <li>
- <a href="/hayat-felsefesi-yapilabilecek-en-guzel-soz--4843239?a=buddyrecent">
-    hayat felsefesi yapılabilecek en güzel söz
-    <div class="detail">sana yaralarimdan cicekler biraktim</div>
+ <a href="/8-ocak-2026-iran-protestolari--8062441?a=buddyrecent">
+    8 ocak 2026 iran protestoları
+    <div class="detail">kazasker</div>
   </a> 
 <input type="checkbox" name="check-27">
 </li>
 <li>
- <a href="/40-yas-ustu-sozluk-yazarlarini-istemiyoruz--8061190?a=buddyrecent">
-    40 yaş üstü sözlük yazarlarını istemiyoruz
+ <a href="/davaro--89446?a=buddyrecent">
+    davaro
     <div class="detail">gedik ahmet pasha</div>
   </a> 
 <input type="checkbox" name="check-28">
 </li>
 <li>
- <a href="/borsa-istanbul--3559807?a=buddyrecent">
-    borsa istanbul
-    <div class="detail">arkanabakmassankuserim, patanona matanona</div>
+ <a href="/yazarlara-whatsapptan-gelen-son-mesaj--4593981?a=buddyrecent">
+    yazarlara whatsapp'tan gelen son mesaj
+    <div class="detail">deep talk</div>
   </a> 
 <input type="checkbox" name="check-29">
 </li>
 <li>
- <a href="/sozlukculerin-favori-muzik-albumleri--6468181?a=buddyrecent">
-    sözlükçülerin favori müzik albümleri
-    <div class="detail">fatmagulun yengesi</div>
+ <a href="/3-ocak-2026-abdnin-maduro-ve-esini-kacirmasi--8060447?a=buddyrecent">
+    3 ocak 2026 abd'nin maduro ve eşini kaçırması
+    <div class="detail">dragonlady, i dont give a fuck about the world, daimat +1 takip</div>
   </a> 
 <input type="checkbox" name="check-30">
 </li>
 <li>
- <a href="/dogan-cuceloglu--125857?a=buddyrecent">
-    doğan cüceloğlu
-    <div class="detail">sana yaralarimdan cicekler biraktim</div>
+ <a href="/gune-enstrumantal-bir-muzik-birak--7505273?a=buddyrecent">
+    güne enstrümantal bir müzik bırak
+    <div class="detail">deep talk</div>
   </a> 
 <input type="checkbox" name="check-31">
 </li>
 <li>
- <a href="/kablosuz-kulaklik--855797?a=buddyrecent">
-    kablosuz kulaklık
-    <div class="detail">shinigami ryuk</div>
+ <a href="/yeni-baslayanlar-icin-lviv--7125338?a=buddyrecent">
+    yeni başlayanlar için lviv
+    <div class="detail">i dont give a fuck about the world</div>
   </a> 
 <input type="checkbox" name="check-32">
 </li>
 <li>
- <a href="/4-ocak-2026-besiktas-gain-fenerbahce-beko-maci--8060319?a=buddyrecent">
-    4 ocak 2026 beşiktaş gain fenerbahçe beko maçı
-    <div class="detail">patanona matanona</div>
+ <a href="/oresnik-fuzesi--7943784?a=buddyrecent">
+    oreşnik füzesi
+    <div class="detail">i dont give a fuck about the world</div>
   </a> 
 <input type="checkbox" name="check-33">
 </li>
 <li>
- <a href="/amerika-birlesik-devletleri--74714?a=buddyrecent">
-    amerika birleşik devletleri
-    <div class="detail">imfuckinluvmyboobs</div>
+ <a href="/do-brasil--8062583?a=buddyrecent">
+    do brasil
+    <div class="detail">i dont give a fuck about the world</div>
   </a> 
 <input type="checkbox" name="check-34">
 </li>
 <li>
- <a href="/national-geospatial-intelligence-agency--2850508?a=buddyrecent">
-    national geospatial-intelligence agency
-    <div class="detail">imfuckinluvmyboobs</div>
+ <a href="/unutulmayan-garip-arkadaslar--3677741?a=buddyrecent">
+    unutulmayan garip arkadaşlar
+    <div class="detail">kimin tenisi daha buyuk</div>
   </a> 
 <input type="checkbox" name="check-35">
 </li>
 <li>
- <a href="/attila-ilhan-siirlerinde-gecen-vurucu-cumleler--5803068?a=buddyrecent">
-    attila ilhan şiirlerinde geçen vurucu cümleler
+ <a href="/mire-poix--3068835?a=buddyrecent">
+    mire poix
     <div class="detail">deep talk</div>
   </a> 
 <input type="checkbox" name="check-36">
 </li>
 <li>
- <a href="/operation-absolute-resolve--8060666?a=buddyrecent">
-    operation absolute resolve
-    <div class="detail">imfuckinluvmyboobs</div>
+ <a href="/gune-bir-siir-birak--5439717?a=buddyrecent">
+    güne bir şiir bırak
+    <div class="detail">deep talk</div>
   </a> 
 <input type="checkbox" name="check-37">
 </li>
 <li>
- <a href="/uluslararasi-hukuk--239099?a=buddyrecent">
-    uluslararası hukuk
-    <div class="detail">highpriestess</div>
+ <a href="/2-6-milyar-dolarlik-figure-aiin-logomu-kullanmasi--8062425?a=buddyrecent">
+    2.6 milyar dolarlık figure ai'ın logomu kullanması
+    <div class="detail">mertim1011, erkeginyabancilasmasi</div>
   </a> 
 <input type="checkbox" name="check-38">
 </li>
 <li>
- <a href="/alone--94026?a=buddyrecent">
-    alone
-    <div class="detail">kimin tenisi daha buyuk</div>
+ <a href="/xi-jinpingin-yuz-ifadesi--8022945?a=buddyrecent">
+    xi jinping'in yüz ifadesi
+    <div class="detail">i dont give a fuck about the world</div>
   </a> 
 <input type="checkbox" name="check-39">
 </li>
 <li>
- <a href="/ah-be-hic-haberin-yok--4357474?a=buddyrecent">
-    ah be hiç haberin yok
-    <div class="detail">deep talk</div>
+ <a href="/mehmet-kahraman--360414?a=buddyrecent">
+    mehmet kahraman
+    <div class="detail">i dont give a fuck about the world</div>
   </a> 
 <input type="checkbox" name="check-40">
 </li>
 <li>
- <a href="/yazarlarin-kendileri-hakkindaki-gereksiz-bilgiler--7479895?a=buddyrecent">
-    yazarların kendileri hakkındaki gereksiz bilgiler
-    <div class="detail">deep talk</div>
+ <a href="/hayatla-olan-savasta-hangi-asamadasin--7789409?a=buddyrecent">
+    hayatla olan savaşta hangi aşamadasın
+    <div class="detail">polly jean</div>
   </a> 
 <input type="checkbox" name="check-41">
+</li>
+<li>
+ <a href="/ozel-egitim-ogrencilerine-27-yas-siniri--8062305?a=buddyrecent">
+    özel eğitim öğrencilerine 27 yaş sınırı
+    <div class="detail">pilav normal bence siz gerzeksiniz</div>
+  </a> 
+<input type="checkbox" name="check-42">
 </li>
 <li>
  <a href="/sozluk-yazarlarinin-cizimleri--3824175?a=buddyrecent">
     sözlük yazarlarının çizimleri
     <div class="detail">highpriestess</div>
   </a> 
-<input type="checkbox" name="check-42">
-</li>
-<li>
- <a href="/venezuela-bolivari-satin-alip-10-sene-bekletmek--6991906?a=buddyrecent">
-    venezuela bolivarı satın alıp 10 sene bekletmek
-    <div class="detail">i dont give a fuck about the world</div>
-  </a> 
 <input type="checkbox" name="check-43">
 </li>
 <li>
- <a href="/starbucksin-kahvesinin-cok-kotu-olmasi--5963883?a=buddyrecent">
-    starbucks'ın kahvesinin çok kötü olması
-    <div class="detail">deep talk</div>
+ <a href="/32-yasinda-evi-arabasi-olmayan-erkek--8062296?a=buddyrecent">
+    32 yaşında evi arabası olmayan erkek
+    <div class="detail">dragonlady</div>
   </a> 
 <input type="checkbox" name="check-44">
 </li>
 <li>
- <a href="/battlefield-6--4023002?a=buddyrecent">
-    battlefield 6
-    <div class="detail">erkeginyabancilasmasi</div>
+ <a href="/imfuckinluvmyboobs--6021371?a=buddyrecent">
+    imfuckinluvmyboobs
+    <div class="detail">kazasker</div>
   </a> 
 <input type="checkbox" name="check-45">
 </li>
 <li>
- <a href="/gune-bir-alinti-birak--6517778?a=buddyrecent">
-    güne bir alıntı bırak
-    <div class="detail">deep talk</div>
+ <a href="/arabada-opusenleri-ifsa-eden-kadin--8062299?a=buddyrecent">
+    arabada öpüşenleri ifşa eden kadın
+    <div class="detail">mertim1011</div>
   </a> 
 <input type="checkbox" name="check-46">
 </li>
 <li>
- <a href="/bir-fotograf-bir-sarki--8054500?a=buddyrecent">
-    bir fotoğraf bir şarkı
-    <div class="detail">sana yaralarimdan cicekler biraktim</div>
+ <a href="/victoria-3--4072346?a=buddyrecent">
+    victoria 3
+    <div class="detail">daimat</div>
   </a> 
 <input type="checkbox" name="check-47">
 </li>
 <li>
- <a href="/nadirkitap-com--1656635?a=buddyrecent">
-    nadirkitap.com
-    <div class="detail">lantirn161</div>
+ <a href="/2028-secimini-rtenin-kazanmasi-ihtimali--7274531?a=buddyrecent">
+    2028 seçimini rte'nin kazanması ihtimali
+    <div class="detail">motorcu cocuk</div>
   </a> 
 <input type="checkbox" name="check-48">
 </li>
 <li>
- <a href="/zvi-migdal--8060925?a=buddyrecent">
-    zvi migdal
-    <div class="detail">fulgura</div>
+ <a href="/kusbasi--74951?a=buddyrecent">
+    kuşbaşı
+    <div class="detail">deep talk</div>
   </a> 
 <input type="checkbox" name="check-49">
 </li>
